<resources>
    <string name="app_name">What\'s That Temperature</string>
    <string name="enter_Fahrenheit">Enter Fahrenheit</string>
    <string name="enter_Celsius">Enter Celsius</string>
    <string name="calculate_text">Calculator</string>
    <string name="contact_button">Contact</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_button">Send</string>
    <string name="cancel_button">Cancel</string>

</resources>
